latent varialbe GGM

--- a/src/20022017_02.ipynb
+++ b/src/20022017_02.ipynb
@@ -329,8 +329,9 @@
     "else:\n",
     "    pos=nx.nx_pydot.graphviz_layout(G0)\n",
     "    \n",
-    "pos_coordinate = np.array([[pos[key][0], pos[key][1]] for key in pos])\n",
     "X0_2, nodeIdx = LSN.get_node_attributes(G0_node)\n",
+    "pos_coordinate = np.array([[pos[it['node']][0], pos[it['node']][1]] for it in nodeIdx])\n",
+    "\n",
     "edge_list = LSN.get_edgelist(G0_node)"
    ]
   },
