--- a/experiments/16022017_01.ipynb
+++ b/experiments/16022017_01.ipynb
@@ -27,7 +27,14 @@
     "#import graph_tool.all as gt\n",
     "%matplotlib inline  \n",
     "import sys\n",
-    "sys.path.append('/home/tianpei/Dropbox/Codes/Python/LatNet/src/')"
+    "\n",
+    "\n",
+    "cwd = getcwd()\n",
+    "dir_root = dirname(cwd)\n",
+    "filepath = os.path.join(dir_root, 'src')\n",
+    "sys.path.append(filepath) #('/home/tianpei/Dropbox/Codes/Python/LatNet/src/')\n",
+    "print(filepath)\n",
+    "%load_ext Cython"
    ]
   },
   {
