--- a/experiments/20022017_02.ipynb
+++ b/experiments/20022017_02.ipynb
@@ -19,16 +19,25 @@
     "import networkx as nx\n",
     "from scipy.sparse.linalg import eigsh\n",
     "import networkx as nx\n",
+    "from networkx.algorithms import bipartite\n",
     "import matplotlib.pyplot as plt\n",
     "import mpl_toolkits.mplot3d.art3d as art3d\n",
     "import os\n",
+    "from os import getcwd\n",
+    "from os.path import dirname\n",
     "from time import gmtime, strftime\n",
     "import scipy as sp\n",
-    "import cvxopt\n",
+    "import cvxpy as cvx\n",
     "from sklearn.linear_model import lars_path\n",
     "%matplotlib inline \n",
     "import sys\n",
-    "sys.path.append('/home/tianpei/Dropbox/Codes/Python/LatNet/src/')"
+    "\n",
+    "cwd = getcwd()\n",
+    "dir_root = dirname(cwd)\n",
+    "filepath = os.path.join(dir_root, 'src')\n",
+    "sys.path.append(filepath) #('/home/tianpei/Dropbox/Codes/Python/LatNet/src/')\n",
+    "print(filepath)\n",
+    "%load_ext Cython"
    ]
   },
   {
@@ -1213,21 +1222,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
