--- a/experiments/26022017_01.ipynb
+++ b/experiments/26022017_01.ipynb
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Use cvx to learn the latent variable sparse inverse covariance estimation\n",
+    "##  Use EM-cvx to learn the latent variable sparse inverse covariance estimation\n",
     "\n",
     "\\begin{eqnarray}\n",
     " (\\mathbf{S}^{*} , \\mathbf{L}^{*})&= \\arg\\min_{\\mathbf{L}\\;, \\;\\mathbf{S}} -\\frac{m}{2}\\log\\det\\left(\\mathbf{S} - \\mathbf{L}\\right)+ \\frac{m}{2}\\text{tr}\\left(\\widehat{\\mathbf{\\Sigma} }_{o}\\left( \\mathbf{S} - \\mathbf{L}\\right)\\right) + \\alpha_{m} \\left(\\lambda \\|\\mathbf{S}\\|_{1}  + \\|\\mathbf{L}\\|_{*}\\right)  \\\\\n",
